# quotes_simple_site

./: .gitingnore  README.md  docker-compose.yml  pyproject.toml
quotes_site/: .env.exemple
quotes_site/quotes/: context_processors.py  forms.py  models.py  urls.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py  0002_rename_text_quote_quote.py  0003_tag_visit_count.py  0004_pendingquote.py  0005_author_created_by_user_pendingquote_created_by_user_and_more.py
quotes_site/quotes/static/quotes/: style.css
quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  pagination.html  pending_data.html  tag_quotes.html  top_ten_tags.html
quotes_site/quotes/utils/: utils.py
quotes_site/quotes_site/: celery.py  settings.py
quotes_site/services/: scraper.py
quotes_site/users/: forms.py  urls.py  views.py
quotes_site/users/templates/users/: login.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  sign_up.html
