[project]
name = "django-quotes-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
